# echo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: bench_distributed.py
docs/src/: development.md  getting-started.md  index.md
docs/src/api/: clients.md  sample-info.md  server.md  trajectory-accumulator.md  transports.md
docs/src/design/: ingress.md  overview.md  ring-buffer.md  selector.md  store.md  transport.md
docs/src/guides/: in-process.md  metrics.md  trajectory-accumulator.md  transports.md  zero-copy.md
python/echo/: __init__.py  echo.pyi  server.py  tcp_client.py  trajectory_accumulator.py
python/tests/: conftest.py  test_client_wait.py  test_distributed_integration.py  test_distributed_metrics.py  test_sample_info.py  test_server.py  test_tcp.py  test_trajectory_accumulator.py
src/: array_spec.rs  ingress.rs  lib.rs  metrics.rs  py_bindings.rs  ring_buf.rs  selector.rs  store.rs
src/transport/: mod.rs  tcp.rs
tests/: ingress.rs  metrics.rs  ring_buf.rs  selector.rs  store.rs  tcp.rs
