[package]
name = "echo"
version = "0.1.1"
edition = "2021"
description = "A fast distributed replay buffer for reinforcement learning."
license = "Apache-2.0"
repository = "https://github.com/instadeepai/echo"
homepage = "https://github.com/instadeepai/echo"
readme = "README.md"
keywords = ["reinforcement-learning", "replay-buffer", "rl", "distributed"]
categories = ["concurrency", "science"]
authors = ["Sasha Abramowitz <s.abramowitz@instadeep.com>"]
# Distributed only as a Python wheel
publish = false

[lib]
name = "echo"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
numpy = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
parking_lot = "0.12"
libc = "0.2"
arc-swap = "1"
crossbeam = { version = "0.8", default-features = false, features = ["crossbeam-queue", "alloc"] }
crossbeam-utils = { version = "0.8", default-features = false }
hdrhistogram = { version = "7.5", default-features = false, optional = true }

[features]
default = []
# Opt-in detailed telemetry: adds per-op CAS counters, per-reservation memcpy
# timing, per-round drain_round timing, and per-sample queue-dwell timing —
# all exposed as hdrhistograms on SampleInfo. Carries ~8B/queue-entry and a
# Mutex-lock per recording, so default builds don't pay for it.
detailed-metrics = ["dep:hdrhistogram"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
